<resources>
    <string name="app_name">Socializing</string>
    <string name="skip_introduction">Skip</string>
    <string name="title_fragment1">Create your</string>
    <string name="subtitle_fragment1">Network</string>
    <string name="description_fragment1">Customize your own social network by choosing a theme, a geographical location and much more… </string>
    <string name="title_fragment2">Set up your</string>
    <string name="subtitle_fragment2">Network</string>
    <string name="description_fragment2">Public so that everyone has access or private to be in smaller numbers…</string>
    <string name="title_fragment3">Share content</string>
    <string name="subtitle_fragment3">on Network</string>
    <string name="description_fragment3">You can share whatever you want : message, media, emails and be notified !</string>
    <string name="welcome_login">Welcome to our App</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="forgottenPassword_login">Forgotten password</string>
    <string name="button_login">Login</string>
    <string name="email_signup">Email</string>
    <string name="name_signup">Name</string>
    <string name="phone_signup">Phone number</string>
    <string name="password_signup">Password</string>
    <string name="button_signup">Signup</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="profile_change_profile_picture">Change profile picture</string>
    <string name="profile_logout">Logout</string>
    <string name="placeholder_post">Enter your message...</string>
    <string name="addPost">add a post</string>
    <string name="myPosts">My posts</string>
    <string name="group_name">Group name</string>
    <string name="group_type">Group type</string>
    <string name="group_subject">Group subject</string>
    <string name="group_access">Group access</string>
    <string name="group_publication">Publication</string>
    <string name="btn_create_groupe">New group</string>
    <string name="group_create">Create a group</string>
    <string name="group_manage">Manage my groups</string>
    <string name="group_add">Join</string>
    <string name="group_empty">There is no message</string>
    <string name="group_waitlist_add">Add</string>
    <string name="new_group">New group</string>
    <string name="member_list">Group members</string>
    <string name="group_exit">Leave the group</string>
    <string name="access_code">Enter an access code to join a private group :</string>
    <string name="no_group">There is no group</string>
    <string name="update_informations">Update Information</string>
    <string name="user_group">You haven\'t created any groups yet</string>
    <string name="user_post">You haven\'t sent any posts yet</string>
    <string name="my_informations">My informations</string>
    <string name="settings">Settings</string>
    <string name="group_title_waitlist">Membership request</string>
    <string name="group_infos">Informations</string>
    <string name="notification_title">Title notification</string>
    <string name="default_notification_channel_id">messages</string>
    <string name="group_edit">Edit the group</string>
    <string name="group_members">Group members</string>
    <string name="delete_group">Delete the group</string>
    <string name="group_notification">Disable notifications</string>
    <string name="title_reseaux">Mes Réseaux</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profil</string>
    <string name="item_default">nom du post</string>
    <string name="item_title_default">Titre du post</string>
    <string name="item_subtitle_default">Sous titre du post</string>
    <string name="item_content_text">Default content</string>
    <string name="item_nbView">3000</string>
    <string name="item_date_ago">1min</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="group_edit_privacy">Private mode</string>
    <string name="group_edit_subject">Group subject</string>
    <string name="group_edit_publications">Publications</string>
    <string name="my_networks">My networks</string>
    <string name="my_groups">My groups</string>
    <string name="groups">Groups</string>
    <string name="profile_username">Nom utilisateur</string>
    <string name="title_groupe">Nom du groupe</string>
    <string name="title_activity_settings_notification">SettingsNotificationActivity</string>
    <string name="notif_newPost">New posts</string>
    <string name="notif_groupProposition">Groups propositions</string>
    <string name="title_settings_notification">Notifications</string>
    <string name="long_latin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod ex nec sagittis suscipit. Pellentesque et massa id turpis rutrum blandit vitae nec lectus. Etiam consequat, tellus sit amet faucibus interdum, neque odio scelerisque sem, id efficitur risus sapien at nunc. Vivamus quis ultrices elit, non auctor dui. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam viverra, velit nec ornare dignissim, lacus lacus malesuada nisi, eu elementum mi ligula a mauris. Phasellus non semper tortor, at condimentum mauris.  Curabitur a tortor justo. Nunc quis arcu aliquam ex maximus ultricies. Praesent eu enim in neque molestie pretium. Sed eget enim suscipit, hendrerit leo vel, lacinia sapien. Fusce in magna eu libero cursus hendrerit. Duis in magna convallis, dapibus velit sit amet, maximus eros. Maecenas ornare purus justo, eget hendrerit nulla porta ac. Proin viverra nisl sit amet est interdum pellentesque. Morbi ut diam quis metus feugiat sollicitudin. Sed id malesuada odio. Cras in lectus nibh. Nam interdum ante ligula. Cras pulvinar faucibus augue at varius.  Cras commodo lacus ut nulla ultrices, sit amet viverra arcu vehicula. Nunc purus metus, auctor et purus nec, sagittis gravida lectus. Nunc eleifend mattis sem, nec sagittis ligula aliquam at. Pellentesque facilisis in felis nec tristique. Nunc dictum vitae est eu mattis. Donec in lacus condimentum, bibendum ligula eu, auctor nisl. Fusce dapibus, orci vitae sollicitudin aliquam, enim dui sagittis lorem, quis ultricies ipsum leo sit amet neque. Nam nec elit leo. Integer eget tellus sed sem hendrerit consectetur. Vivamus sit amet velit tincidunt, ullamcorper purus eget, tempus neque.  Aliquam non elit mauris. Morbi malesuada mattis turpis, at pulvinar justo mollis quis. Sed lobortis tempus scelerisque. Vestibulum posuere, purus at rhoncus tincidunt, lorem velit luctus arcu, quis condimentum ligula diam id augue. Fusce lobortis vitae est ac posuere. Praesent eros dui, scelerisque vitae ullamcorper quis, bibendum non sapien. Nulla facilisi. Cras purus orci, dapibus in condimentum vel, congue eget sapien. Phasellus ultrices feugiat diam vel dictum.  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis magna erat, aliquam vitae ornare a, rutrum nec justo. Curabitur ac ullamcorper nunc, a lobortis massa. In venenatis commodo malesuada. Sed rutrum lacus sit amet felis tempor, eget pretium elit convallis. Vivamus hendrerit mi ac facilisis tempus. Nulla sit amet tempus lacus. Nunc mattis enim eu eros imperdiet sollicitudin. Pellentesque eros ex, dictum bibendum imperdiet in, gravida vel urna. Aliquam eget nisl pellentesque, viverra mauris sed, molestie urna. Etiam neque ipsum, dictum nec velit sit amet, semper placerat ante.</string>
    <string name="email_adress">Email adress</string>
    <string name="phone_number">Phone number</string>
    <string name="nom_du_groupe">Group\'s name</string>
    <string name="group_moderators">Gérer les modérateurs</string>
    <string name="title_settings_alerts">Alerts</string>
    <string name="title_activity_new_post">newPostActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_new_group">New group</string>
    <string name="notif_disable">Disable notifications</string>
    <string name="messageNoGroupFound">No groups found.</string>
    <string name="messageNoGroup">There are no groups</string>
    <string name="messageNoGroupType">There are no groups</string>
    <string name="error_unknown_error">unknown error</string>
    <string name="button_send">Send</string>
    <string name="placeholder_message">Message...</string>
    <string name="username">username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings_category_general">General</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_activated">Activated</string>
    <string name="settings_desactivated">Deactivated</string>
    <string name="settings_log_out">Log out</string>
    <string name="toast_send_request_waitinglist">Add in waiting list</string>
    <string name="text_admin">Admin</string>
    <string name="text_moderator">Moderator</string>
    <string name="text_member">Member</string>
    <string name="text_former_member">Former Member</string>
    <string name="toast_send_request_addUser">User is added !</string>
    <string name="toast_delete_user_waitlist">User is deleted from waiting list!</string>
    <string name="contact">Contact</string>
    <string name="promote_to_moderator">Promote to moderator</string>
    <string name="exclure">Kick out</string>
    <string name="demote_to_member">Demote to member</string>
    <string name="toast_contact_user">Contact (TO DO) !</string>
    <string name="text_day">j</string>
    <string name="text_hour">h</string>
    <string name="text_min">min</string>
    <string name="text_now">now</string>
    <string name="toast_message_email_not_correct">The email address must be correct</string>
    <string name="toast_message_password_characters_min">Password must be at least 4 characters</string>
    <string name="toast_message_login_sucess">User logged sucessfully !</string>
    <string name="toast_message_sign_in_fail">Sign in failed :</string>
    <string name="toast_message_user_created">User created !</string>
    <string name="toast_message_signup_fail">Sign up failed :</string>
    <string name="delete_image">Delete image</string>
    <string name="message_send">Message sent !</string>
    <string name="message_upload_failed">Failed to upload !</string>
    <string name="writte_some_text">Please write text</string>
    <string name="error_sending_message">Error sending message</string>
    <string name="message_send_sms">SMS sent !</string>
    <string name="message_send_email">Email sent !</string>
    <string name="message_no_email_client_installed">There is no email client installed.</string>
    <string name="text_private">private</string>
    <string name="text_public">public</string>
    <string name="error_incorect_email">The email address must be correct</string>
    <string name="error_incorect_phone">The phone mustn\'t be empty and be correct</string>
    <string name="info_update_user_informations">User\'s informations has been updated !</string>
    <string name="fragment_name_my_posts">My Posts</string>
    <string name="info_empty_newGroup">The fields are empty</string>
    <string name="info_field_incorect">A field is not correct!</string>
    <string name="message_uploading_image">Uploading image...</string>
    <string name="message_image_uploaded">Image uploaded !</string>
    <string name="message_access_code_correct">The code is OK ! Access to the group :</string>
    <string name="all">All</string>
    <string name="post">Post</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
</resources>