<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_searchPage"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_new_group" />

    <item
        android:id="@+id/navigation_mes_reseaux"
        android:icon="@drawable/ic_grip_horizontal_solid"
        android:title="@string/title_reseaux" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile2_24"
        android:title="@string/title_profile" />

</menu>