<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:persistent="false">


        <PreferenceCategory app:title="Alertes">

            <SwitchPreferenceCompat
                app:key="group_notification"
                app:title="@string/group_notification"
                android:summaryOn="Les notification du groupe sont désactivés"
                android:summaryOff="Les notification du groupe sont activés"
                />

        </PreferenceCategory>

    <PreferenceCategory app:title="Invitations" android:key="category_invitations">

        <Preference
            app:key="group_invite"
            app:title="Générer un code d'invitation" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Général">

        <Preference
            app:key="group_edit"
            app:title="@string/group_edit" />

        <Preference
            app:key="group_waitlist"
            app:title="@string/group_waitlist" />

        <Preference
            app:key="group_members"
            app:title="@string/group_members" />

        <Preference
            app:key="group_delete"
            app:title="@string/delete_group"/>

        <Preference
            app:key="group_exit"
            app:title="@string/group_exit"/>


    </PreferenceCategory>
</PreferenceScreen>