<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <PreferenceCategory app:title="Notifications">

            <SwitchPreferenceCompat
                app:key="notif_disabled"
                app:title="@string/notif_disable"
                android:disableDependentsState="true"
                android:summaryOn="You will no longer receive notifications"
                android:summaryOff="You will receive notifications"/>

            <SwitchPreferenceCompat
                android:dependency="notif_disabled"

                app:key="notif_newPost"
                app:title="@string/notif_newPost" />


            <SwitchPreferenceCompat
                android:dependency="notif_disabled"

                app:key="notif_groupProposition"
                app:title="@string/notif_groupProposition" />

        </PreferenceCategory>
</PreferenceScreen>