<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notifications_black_24dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:textSize="15dp"
            android:textStyle="bold"
            android:paddingRight="10dp"
            android:layout_marginRight="30dp"

            android:text="@string/item_title_default" />

        <TextView
            android:id="@+id/item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:textSize="15dp"

            android:text="@string/item_content_text"
            android:layout_below="@+id/item_title"/>

        <TextView
            android:id="@+id/item_date_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:text="@string/item_date_ago"

            android:layout_alignParentRight="true"/>

    </RelativeLayout>


</LinearLayout>