<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:background="@drawable/bg_message"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:id="@+id/container">


    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:textAllCaps="true"
        android:text="@string/username" />

    <TextView
        android:id="@+id/item_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15dp"
        android:text="@string/item_content_text" />

    <androidx.cardview.widget.CardView
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/browser_actions_bg_grey">

        <ImageView
            android:id="@+id/item_picture"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:visibility="visible"

            android:layout_gravity="center"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_date_ago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="10dp"

        android:text="@string/item_date_ago" />



</LinearLayout>