<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_post"
    android:padding="20dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"

            android:src="@drawable/ic_profile_24" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                android:paddingRight="10dp"

                android:text="@string/item_title_default" />

            <TextView
                android:id="@+id/item_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:text="@string/item_subtitle_default"

                android:layout_below="@+id/item_title"/>

            <TextView
                android:id="@+id/item_date_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:text="@string/item_date_ago"

                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/item_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/item_content_text" />

    <!-- FOOTER -->
    <RelativeLayout
        android:id="@+id/item_footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_24" />

            <TextView
                android:id="@+id/item_nbViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/item_nbView"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/item_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#00000000"
            android:src="@drawable/ic_baseline_more_horiz_24"
            android:layout_centerHorizontal="true"/>


        <LinearLayout
            android:id="@+id/button_like_post"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/image_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_outline_24"/>
            <TextView
                android:id="@+id/item_nbStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                android:text="543" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>